--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,46 @@ body > #root {
   align-items: center;
 }
 
+.todoApp {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 75%;
+  height: 75%;
+}
+
 .card {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    padding: 40px;
+    width: 50%;
+    min-height: 400px;
     margin-top: 2vh;
-    padding: 25vh 20vw;
-  }
+    
+}
+
+.placeholdercard {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  padding: 40px;
+  width: 50%;
+  min-height: 400px;
+  margin-top: 2vh;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  align-content: space-between;
+  padding: 0;
+  list-style-type: none;
+}
+
+.hide {
+  margin-top: auto;
+}
