--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,11 @@ body > #root {
 .hide {
   margin-top: auto;
 }
+
+.btnSorting {
+  background: none;
+  color: #000;
+  font-weight: bold;
+  border: none;
+  box-shadow: none;
+}
